fix spacing

--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -36,6 +36,7 @@
   .homePage_column {
     display: flex;
     flex-wrap: wrap;
+    height: 0px;
 
     .homePage_display {
       margin: 5px;
